tests/miniJava/neg/006163_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { static if ( 0 ) { } else { } } }
